--- a/HTML-CSS/Ex002/index.html
+++ b/HTML-CSS/Ex002/index.html
@@ -10,7 +10,7 @@
     <h1>Parágrafos e quebra de linhas</h1>
     <hr>
     <p>Você pode escrever um parágrafo
-        de qualquer jeito.
+        de qualquer forma.
         Basta colocar tudo no meio do par de tags 
         &lt;p&gt; e &lt;/p&gt;.
     </p>
