--- a/HTML-CSS/Ex002/index.html
+++ b/HTML-CSS/Ex002/index.html
@@ -17,5 +17,26 @@
     <p>Se precisar quebrar o texto em algum lugar específico
         <br> como esse, você pode usar a tag &lt;br&gt;.
     </p>
+    <p>Adicionando alguns símbolos especiais: <br>
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uarr;
+    </p>
+    <p>Adicionando emojis: <br>
+        &#x1F60E;
+        &#x1F47E;
+        &#x1F469;
+        &#x1F4BB;
+
+
+
+
+    </p>
 </body>
 </html>
