--- a/HTML-CSS/Ex003/index.html
+++ b/HTML-CSS/Ex003/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste com imagens</title>
 </head>
 <body>
-    
-</body>
+    <h1>Testando carga de imagens</h1>
+    <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
+    <img src="logo-html.png" alt="Logo HTML5">
+    <p>Também é possível carregar imagens de sub-pastas.</p>
+    <img src="imagens/logo-css.png" alt="Logo CSS 3">
+    <p>Ou carregar imagens externas. </p>
+    <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Logo JavaScript">
 </html>
