--- a/HTML-CSS/Ex002/index.html
+++ b/HTML-CSS/Ex002/index.html
@@ -11,7 +11,8 @@
     <hr>
     <p>Você pode escrever um parágrafo
         de qualquer forma.
-        Basta colocar tudo no meio do par de tags 
+        Basta colocar tudo no 
+        meio do par de tags 
         &lt;p&gt; e &lt;/p&gt;.
     </p>
     <p>Se precisar quebrar o texto em algum lugar específico
