--- a/HTML-CSS/Ex001/index.html
+++ b/HTML-CSS/Ex001/index.html
@@ -10,6 +10,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Esse é o meu primeiro documento HTML :)</p>
-    <p>É um momento especial, estou dando os meus primeiros passos.</p>
+    <p>É um momento muito especial, estou dando os meus primeiros passos.</p>
 </body>
 </html>
