--- a/HTML-CSS/Ex003/index.html
+++ b/HTML-CSS/Ex003/index.html
@@ -12,6 +12,6 @@
     <img src="logo-html.png" alt="Logo HTML5">
     <p>Também é possível carregar imagens de sub-pastas.</p>
     <img src="imagens/logo-css.png" alt="Logo CSS 3">
-    <p>Ou carregar imagens externas. </p>
+    <p>E/ou carregar imagens externas. </p>
     <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-2038874-1720087.png" alt="Logo JavaScript">
 </html>
