Hierarquia de Títulos

--- a/HTML-CSS/ex005/index.html
+++ b/HTML-CSS/ex005/index.html
@@ -10,14 +10,32 @@
 <body>
     <h1>Entendendo Portugual</h1>
     <h2>Introdução</h2>
+
     <h3>Justificação da temática</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum vitae sequi necessitatibus incidunt asperiores nesciunt enim, non atque autem harum facere quae animi cum blanditiis voluptates corporis error aliquid veniam!</p>
+
     <h3>Caráter excepcional do caso de estudo</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident esse, aut adipisci officia vel corrupti vero quis et repudiandae nulla cupiditate odio sed cum sint in reprehenderit nostrum, assumenda praesentium.</p>
+
     <h3>Perguntas de partida</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, ex est, ad ullam repellat nemo quo ipsum ipsam nostrum perspiciatis atque. Voluptatibus sit facilis omnis similique non laborum delectus iste!</p>
+
     <h3>Metodologia de investigação</h3>
-    <h4>Etas de investigação</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, consequatur? Itaque labore accusamus architecto recusandae dignissimos doloremque natus harum, distinctio soluta pariatur aliquam ipsum. Dolorum eos repellat itaque vitae omnis?</p>
+
+    <h4>Metas de investigação</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, tempore! Nihil saepe illo at nesciunt laudantium blanditiis necessitatibus molestias nobis porro possimus ex minima repellendus neque, natus fuga ipsam. Rerum!</p>
+
     <h4>Instrumentos de análise</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum non itaque accusantium unde cupiditate! Nemo officia perferendis rerum alias quo qui ratione doloremque quas? Quam eum minus asperiores nulla inventore?</p>
+
     <h2>O ordenamento do território</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae hic maxime neque culpa commodi aliquid. Alias magnam nam maxime, esse quibusdam, placeat, ullam molestias quos quisquam deserunt temporibus dolorum facilis?</p>
+
     <h3>Os instrumentos de gestão do território</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt enim earum sit rerum eius commodi accusantium magni! Impedit enim veritatis nisi nostrum, alias facere reprehenderit vero, error necessitatibus quae quod!</p>
+    
     <h3>Os regimes territoriais especiais</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, deleniti corrupti animi ut quis dolor debitis dolores, rem fuga officiis eligendi? Porro, aspernatur optio! Illum unde eos quibusdam ullam delectus?</p>
 </body>
 </html>
