--- a/HTML-CSS/ex006/index.html
+++ b/HTML-CSS/ex006/index.html
@@ -6,14 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Formatação de Textos</title>
+    <style>
+        mark{
+            background-color: darkviolet;
+        }
+    </style>
 </head>
 <body>
     <h1>Principais formatações</h1>
+
     <h2>Negrito/Destaque</h2>
     <p>Nesta frase temos um <b>termo em negrito</b>  usando a tag B (Não semântica).</p>
     <p>Nesta frase temos um <strong>termo em negrito</strong>  usando a tag STRONG (semântica).</p>
+
     <h2>Itálico/Ênfase</h2>
     <p>Nesta frase temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
     <p>Nesta frase temos um <em>termo em itálico</em> usando a tag EM (semântica).</p>
+
+    <h2>Texto marcado</h2>
+    <p>Podemos criar também um <mark>texto marcado</mark> usando a tag Mark.</p>
+    <p>Neste outro parágrafo marcamos o <mark>texto no final.</mark></p>
+
+    <h2>Texto grande e pequeno</h2>
+    <p>Estou escrevendo um <big>texto grande</big> e um <small>texto pequeno</small> neste parágrafo.</p>
+    <!--A tag Big está entrando em desuso-->
+
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um <del>texto como excluído</del> para indicar que ele deve ser lido, mas não considerado.</p>
+
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar um <ins>texto como inserido</ins> para dar ênfase e indicar que ele foi inserido depois.</p>
+    <p>Também existe o <u>sublinhado</u> com a tag U (não semântica).</p>
+
+    <h2>Texto sobrescrito</h2>
+    <p>Para inserir coisas como X<sup>7</sup>*4</p>
+
+    <h2>Texto subscrito</h2>
+    <p>Para inserir coisas como H<sub>2</sub>O.</p>
+
 </body>
 </html>
