--- a/HTML-CSS/ex008/index.html
+++ b/HTML-CSS/ex008/index.html
@@ -34,5 +34,62 @@
         <li>Gol</li>
         <li>Fiorino</li>
     </ul>
+
+    <h2>Misturando as Listas</h2>
+    <h3>Minhas músicas favoritas</h3>
+    <ul>
+        <li>Jão</li>
+        <ol>
+            <li>Lobos</li>
+            <ul type="circle">
+                <li>Vou morrer sozinho</li>
+                <li>Imaturo</li>
+                <li>Ressaca</li>
+                <li>Ainda te amo</li>
+            </ul>
+            <li>Anti-Herói</li>
+            <ul>
+                <li>Triste pra sempre</li>
+                <li>Barcelona</li>
+                <li>Enquanto me beija</li>
+                <li>A última noite</li>
+            </ul>
+            <li>Pirata</li>
+            <ul type="disc">
+                <li>Idiota</li>
+                <li>Coringa</li>
+            </ul>
+        </ol>
+        <li>AnaVitoria</li>
+        <ol>
+            <li>AnaVitoria</li>
+            <ul type="circle">
+                <li>Cor de marte</li>
+                <li>Singular</li>
+                <li>Agora eu quero ir</li>
+                <li>Nos</li>
+            </ul>
+            <li>O tempo é agora</li>
+            <ul>
+                <li>Preta</li>
+                <li>Cecília</li>
+                <li>Dói sem tanto</li>
+                <li>A gente junto</li>
+                <li>Porque eu te amo</li>
+            </ul>
+            <li>Cor</li>
+            <ul type="disc">
+                <li>Amarelo, Azul e Branco</li>
+                <li>Te amar é massa demais</li>
+                <li>Lisboa</li>
+                <li>Terra</li>
+                <li>Tenta acreditar</li>
+            </ul>
+        </ol>
+    </ul>
+
+
+
+
 </body>
 </html>
