--- a/HTML-CSS/ex009/index.html
+++ b/HTML-CSS/ex009/index.html
@@ -12,8 +12,14 @@
     <p>Você pode acessar o <a href="https://github.com/jeniferscarlate" target="_blank" rel="external">meu perfil no GitHub</a>.</p>
     <p>E também o meu <a href="https://www.linkedin.com/in/jeniferscarlate/" target="_blank" rel="external">perfil no Linkedin.</a></p>
 
-    <h2>Usando links internos</h2>
+    <h1>Usando links internos</h1>
     <p>Esta é a primeira página do site. <br> Se você quiser, pode acessar a <a href="pag02.html" target="_self" rel="next">segunda página.</a> </p>
     <p>Você também pode acessar a nossa <a href="noticias/pag03.html">página de notícias.</a></p>
+
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="Livros/meulivro.pdf" download="meulivro.pdf" type="application/pdf">Baixar livro em PDF</a></li>
+        <li><a href="Livros/meulivro.zip" download="meulivro.zip" type="application/zip">Baixar livro em ZIP</a></li>
+    </ul>
 </body>
 </html>
