Imagens dinâmicas, áudios e vídeos

--- a/HTML-CSS/ex010/index.html
+++ b/HTML-CSS/ex010/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Mídias em HTML5</title>
 </head>
 <body>
@@ -17,5 +18,14 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
+
+    <h1>Reproduzindo áudios</h1>
+    <audio preload="metadata" controls>
+        <source src="mideas/tempos-vari-freedom-trail-studio.mp3" type="audio/mpeg">
+        <p>
+            Caso seu navegador não suporte áudio, faça o <a href="mideas/tempos-vari-freedom-trail-studio.mp3" download="tempos-vari-freedom-trail-studio.mp3" type="audio/mpeg">donwload</a> do nosso arquivo.
+        </p>
+
+    </audio>
 </body>
 </html>
