--- a/HTML-CSS/d007/index.html
+++ b/HTML-CSS/d007/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Desafio da imagem flexível</h1>
-    <p>Se a imagem estiver completa, experimente diminuir o tamanho da janela para ver a imagem menor ou amplie sua janela para vê-la maior.</p>
+    <p>Se a imagem estiver completa, experimente diminuir o tamanho da janela para ver a imagem menor <br> ou amplie sua janela para vê-la maior.</p>
     <picture>
         <source media="(max-width: 650px)" srcset="imagens/foto-400.jpg" type="image/jpeg">
         <source media="(max-width: 1050px)" srcset="imagens/foto-600.jpg" type="image/jpeg">
