--- a/HTML-CSS/ex017/fonte01.html
+++ b/HTML-CSS/ex017/fonte01.html
@@ -12,6 +12,7 @@
         }
         h1, h2{
             font-family: 'Times New Roman', Times, serif;
+            font-size: 2em;
         }
     </style>
 </head>
