Posição de Fundo

--- a/HTML-CSS/ex022/fundo5.html
+++ b/HTML-CSS/ex022/fundo5.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+                color -> image -> position -> repeat -> size* -> attachment
+            */    
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid rgb(0, 0, 0);
@@ -28,7 +36,7 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempore soluta doloribus assumenda labore incidunt ullam repellendus nisi architecto saepe laborum, ex id optio ab aliquam a recusandae! Dolorum, alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptas cumque laborum aliquid, assumenda molestias quod tenetur commodi obcaecati facilis itaque voluptates voluptatum quibusdam? Maxime amet dicta neque officiis aliquid. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit placeat dolorum porro neque aspernatur consequatur laboriosam voluptate explicabo, ullam libero, labore amet ea laborum commodi iste. Non, officia eos!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempore soluta doloribus assumenda labore incidunt ullam repellendus nisi architecto saepe laborum, ex id optio ab aliquam a recusandae! Dolorum, alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptas cumque laborum aliquid, assumenda molestias quod tenetur commodi obcaecati facilis itaque voluptates voluptatum quibusdam? Maxime amet dicta neque officiis aliquid. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit placeat dolorum porro neque aspernatur consequatur laboriosam voluptate explicabo, ullam libero, labore amet ea laborum commodi iste. Non, officia eos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Id numquam sed consequatur, incidunt dolores, deleniti quibusdam culpa laudantium nesciunt illo tenetur sunt necessitatibus sequi non pariatur eveniet nisi distinctio. Amet? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque enim amet sequi repellendus eum quae odio error nesciunt fugit sint incidunt, perferendis, quaerat optio. Nisi dignissimos ipsum eaque illum dolor. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat esse officia, fugit itaque doloremque magnam nisi nostrum distinctio consectetur quas? Incidunt placeat tempore in itaque eligendi, aperiam inventore nam laboriosam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut non eos atque beatae iusto. Dolore, nesciunt aliquam, quis quo expedita id consequuntur quaerat repudiandae recusandae iure, neque saepe impedit vitae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores aspernatur ab, sapiente repellendus tempora quod expedita aut quisquam, ex ea saepe officiis. Nobis numquam reprehenderit doloribus illo atque vel et. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem blanditiis maxime officia modi, culpa earum vero odio sit nisi deleniti voluptate labore quas at molestiae. Libero dolore ex eum itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum dolore reprehenderit labore! Ipsum earum magni accusamus, ea nostrum hic commodi ipsa, corporis, iusto pariatur cum. Natus magnam delectus a vel! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui omnis, voluptas molestias odio vitae dolor aperiam ea delectus? Voluptatibus aliquam officiis aut saepe necessitatibus sint? Quisquam facilis voluptatum dignissimos architecto! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis soluta sed veritatis unde nam quia, doloremque quae aliquam vero consequuntur veniam nemo voluptatem vitae velit optio doloribus molestias corporis voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae neque hic culpa cum! Quod libero molestiae consequatur fugiat rerum voluptates aliquid sint facere cum ipsam repellat, adipisci deleniti quas quos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut autem doloremque at perferendis molestias animi, ipsa beatae fuga dolores molestiae quisquam sunt, quidem sequi adipisci numquam, et non culpa asperiores!
         </p>
     </main>
 </body>
